# Kidsnow

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  application.cpp  application.h  camera.cpp  camera.h  context.h  glad.c  glcommon.h  glcontext.cpp  glcontext.h  glmodel.cpp  glmodel.h  glrenderer.cpp  glrenderer.h  glscene.cpp  glscene.h  glshader.cpp  glshader.h  glwindow.cpp  glwindow.h  graphics.h  input.cpp  input.h  kidsnow.h  log.h  logger.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  parser.h  renderer.cpp  renderer.h  rendererfactory.cpp  (+30 more)
src/resource/: simple.frag  simple.vert  texture.frag  texture.vert  wecs.comp
